[tool.poetry]
name = "apscheduler-di"
version = "0.0.3"
description = "Lightweight and beneficial Dependency Injection plugin for apscheduler "
authors = ["Gleb Garanin <glebgar567@gmail.com>"]
packages = [
    { include = "./apscheduler_di" }
]
readme = 'README.md'
maintainers = [
    "GLEF1X <glebgar567@gmail.com>",
]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: Russian",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.6"
APScheduler = "^3.8.1"
rodi = "^1.1.1"

[tool.poetry.dev-dependencies]
# testing
pytest = { version = "^6.2.5", python = ">=3.6" }
pytest-cov = { version = "^3.0.0", python = ">=3.6" }
pytest-asyncio = { version = "^0.16.0", python = ">=3.6" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
