[tool.poetry]
name = "apscheduler-di"
version = "0.1.0"
description = "Lightweight and beneficial Dependency Injection plugin for apscheduler "
authors = ["Gleb Garanin <glebgar567@gmail.com>"]
packages = [
    { include = "./apscheduler_di" }
]
readme = 'README.md'
maintainers = [
    "GLEF1X <glebgar567@gmail.com>",
]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: Russian",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
APScheduler = "^3.8.1"
rodi = "^2.0.0"

[tool.poetry.group.dev.dependencies]
# testing
pytest = { version = "^7.0.1", python = ">=3.7" }
pytest-cov = { version = "^4.0.0", python = ">=3.7" }
pytest-asyncio = { version = "^0.20.3", python = ">=3.7" }
redis = {version = "*", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
